<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ib.edu.lab9.Accelerometer">

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:onClick="onClickAction"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/clearDataButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xAxis" />

    <EditText
        android:id="@+id/xAxis"
        android:layout_width="181dp"
        android:layout_height="41dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="101dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zeroValue"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/zAxis"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="102dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zeroValue"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/yAxis"
        android:layout_width="179dp"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="103dp"
        android:layout_marginStart="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zeroValue"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="173dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="8dp"
        android:text="@string/zAxis"
        app:layout_constraintBottom_toTopOf="@+id/yAxis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="173dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="5dp"
        android:text="@string/yAxis"
        app:layout_constraintBottom_toTopOf="@+id/zAxis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yAxis" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="39dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="5dp"
        android:text="@string/xAxis"
        app:layout_constraintBottom_toTopOf="@+id/xAxis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zAxis" />

    <Button
        android:id="@+id/clearDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="26dp"
        android:text="@string/clearData"
        android:onClick="clearData"
        app:layout_constraintEnd_toStartOf="@+id/plotButton"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/xAxis" />

    <Button
        android:id="@+id/plotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:onClick="Plot"
        android:text="@string/plot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearDataButton"
        app:layout_constraintTop_toBottomOf="@+id/xAxis" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/fileName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearDataButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:onClick="saveData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</android.support.constraint.ConstraintLayout>