<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gyroscope">

    <EditText
        android:id="@+id/xAxis"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginBottom="163dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zeroValue"
        app:layout_constraintBottom_toTopOf="@+id/plotLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zAxis"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/zAxis"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zeroValue"
        app:layout_constraintEnd_toStartOf="@+id/xAxis"
        app:layout_constraintStart_toEndOf="@+id/yAxis"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/yAxis"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="163dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zeroValue"
        app:layout_constraintBottom_toTopOf="@+id/plotLayout"
        app:layout_constraintEnd_toStartOf="@+id/zAxis"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="9dp"
        android:text="@string/zAxis"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="77dp"
        android:layout_height="18dp"
        android:layout_marginEnd="69dp"
        android:layout_marginTop="8dp"
        android:text="@string/yAxis"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="39dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="9dp"
        android:text="@string/xAxis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:onClick="startMeasure"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/Drawbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zAxis" />

    <Button
        android:id="@+id/Drawbtn"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="81dp"
        android:onClick="drawPlot"
        android:text="@string/plot"
        app:layout_constraintBottom_toTopOf="@+id/plotLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zAxis" />

    <LinearLayout
        android:id="@+id/plotLayout"
        android:layout_width="363dp"
        android:layout_height="270dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Drawbtn"
        app:layout_constraintVertical_bias="1.0"></LinearLayout>

    <Button
        android:id="@+id/transformer"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="10dp"
        android:onClick="transform"
        android:text="@string/transformer"
        app:layout_constraintBottom_toTopOf="@+id/plotLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Drawbtn"
        app:layout_constraintTop_toBottomOf="@+id/startBtn"
        app:layout_constraintVertical_bias="0.375" />

</android.support.constraint.ConstraintLayout>